outputs/fuzzing_outputs4/log_validation.txt
[TRACE] Validating outputs/fuzzing_outputs4/0.fuzz ...
[VERBOSE] outputs/fuzzing_outputs4/0.fuzz failed validation with error message: outputs/fuzzing_outputs4/0.fuzz:3:2: error: expected unqualified-id before ‘else’
    3 |  else { double a = 5; } }
      |  ^~~~
outputs/fuzzing_outputs4/0.fuzz:3:25: error: expected declaration before ‘}’ token
    3 |  else { double a = 5; } }
      |                         ^
outputs/fuzzing_outputs4/0.fuzz:4:1: error: expected unqualified-id before ‘{’ token
    4 | {{ { "invalid dereference of an empty pointer.",
      | ^

[TRACE] Validating outputs/fuzzing_outputs4/1.fuzz ...
[VERBOSE] outputs/fuzzing_outputs4/1.fuzz is safe
[TRACE] Validating outputs/fuzzing_outputs4/2.fuzz ...
[VERBOSE] outputs/fuzzing_outputs4/2.fuzz is safe
[TRACE] Validating outputs/fuzzing_outputs4/3.fuzz ...
[VERBOSE] outputs/fuzzing_outputs4/3.fuzz failed validation with error message: outputs/fuzzing_outputs4/3.fuzz:3:42: warning: missing terminating ' character
    3 |       This will throw segfault if we aren't careful.
      |                                          ^
outputs/fuzzing_outputs4/3.fuzz:3:42: error: missing terminating ' character
    3 |       This will throw segfault if we aren't careful.
      |                                          ^~~~~~~~~~~
outputs/fuzzing_outputs4/3.fuzz:3:7: error: ‘This’ does not name a type
    3 |       This will throw segfault if we aren't careful.
      |       ^~~~

[TRACE] Validating outputs/fuzzing_outputs4/4.fuzz ...
[VERBOSE] outputs/fuzzing_outputs4/4.fuzz is safe
